# SymDex

./: .gitignore  README.md  pyproject.toml  run-symdex.sh
.github/workflows/: publish.yml
symdex/: cli.py
symdex/core/: indexer.py  storage.py  watcher.py
symdex/graph/: call_graph.py
symdex/integrations/: __init__.py  omega_sink.py
symdex/mcp/: server.py  tools.py
symdex/search/: semantic.py
tests/unit/: test_cli_routes.py  test_indexer.py  test_routes.py  test_storage.py  test_tools_routes.py  test_watcher.py
